--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <base href="/" />
     <title>ShareOrb</title>
     <meta charset="utf-8" />
-
+    <link rel="icon" href="./tabLogo.svg?v=2"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
