--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,7 +4,7 @@
     <base href="/" />
     <title>ShareOrb</title>
     <meta charset="utf-8" />
-    <link rel="icon" href="./tabLogo.svg?v=2"/>
+    <link rel="icon" href="./tabLogo1.svg?v=2"/>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
