lots of bug fixinng, took out events tab, chats fix

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,8 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Connecting people through calendars"
+      content="Connecting people through calendars.
+       Creating memories every single day. Share your calendar with your network. "
     />
     <script src="./main.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
