--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -42,6 +42,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
+
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YVDQBB8S5Z"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-YVDQBB8S5Z');
+    </script>
+
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
