updates to views

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Connecting people one photo album a day"
+      content="Your photos. Your everyday moments"
     />
     <script src="./main.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
